fix item details too large for small screen

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ nav {
 .list-item-details {
     padding: 20px;
     background: white;
-    width: 100%;
 }
 .list-item-details p {
     padding: 20px 0;
